force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/Apttus_Config2__ProductDefaultRule__c.object-meta.xml
<CustomObject>
    <description>Represents a rule to default products, quantity and term</description>
    <label>Product Default Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Default Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>