force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Criteria__c</fullName>
    <description>The rule criteria specification</description>
    <label>Rule Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>