force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__EditCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EditCriteria__c</fullName>
    <description>&quot;Edit Criteria&quot; custom button</description>
    <formula>IF (True, HYPERLINK(&quot;apex/Apttus_Config2__ProductDefaultRuleCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_EditCriteria&quot;, &quot;Edit Criteria&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Criteria</label>
    <type>Text</type>
</CustomField>