force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>The rule effective date. The rule becomes effective on this date and time.</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>