force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FilterLogic__c</fullName>
    <description>The default filter logic expression</description>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>