force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__InclusionCriteriaCompOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaCompOper__c</fullName>
    <description>The rule inclusion criteria comparison operator</description>
    <label>Inclusion Criteria Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>