force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__InclusionCriteriaFieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
    <description>The rule inclusion criteria field</description>
    <label>Inclusion Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>