force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__NumberOfFilters__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfFilters__c</fullName>
    <description>Indicates the number of filters associated with the default rule</description>
    <label>Number Of Filters</label>
    <summaryForeignKey>Apttus_Config2__ProductDefaultRuleFilter__c.Apttus_Config2__ProductDefaultRuleId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>