force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__NumberOfValues__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfValues__c</fullName>
    <description>Indicates the number of values associated with the default rule</description>
    <label>Number Of Values</label>
    <summaryForeignKey>Apttus_Config2__ProductDefaultValue__c.Apttus_Config2__ProductDefaultRuleId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>