force-app/main/default/objects/Apttus_Config2__ProductDefaultRule__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The rule evaluation sequence</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>